列表内容全部完成

--- a/admin/src/assets/style/_variable.scss
+++ b/admin/src/assets/style/_variable.scss
@@ -5,7 +5,7 @@ $black: #000;
 // 系统配色
 $title: #2c3e50;
 $word: #34495e;
-$base: #f18f01;
+$base: #8A2BE2;
 $quote: #99c24d;
 $special: #c1bfb5;
 $background: #ebeff5;
