--- a/admin/src/assets/style/index.scss
+++ b/admin/src/assets/style/index.scss
@@ -7,7 +7,10 @@
     fill: currentColor;
     overflow: hidden;
 }
-
+ul,li{
+  padding: 0;
+  list-style: none;
+}
 html {
     font: {
         size: 62.5%;
@@ -22,7 +25,7 @@ body {
     margin: 0;
     height: 100%;
     min-width: 1024px;
-    min-height: 900px;
+    //min-height: 900px;
 }
 
 body * {
@@ -57,7 +60,10 @@ a {
 .logo {
     width: 30px;
     height: 30px;
+    border-radius: 50%;
+    margin-left: 10px;
 }
+
 
 .editor-toolbar {
     @include flex($justify: flex-start);
